[metadata]
name = AlphaCRV
version = 1.0.0
author = Francisco J. Guzmán-Vega, Stefan T. Arold
author_email = francisco.guzmanvega@kaust.edu.sa
description = Pipeline for Identifying Accurate Binder Topologies in Mass-Modeling with AlphaFold
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/strubelab/AlphaCRV
license_files = LICENSE

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
# package_dir =
#     = example_wrapper
packages = find:
python_requires = >=3.6
scripts =
    bin/alphacrv-cluster
    bin/alphacrv-rank

# [options.packages.find]
# where = example_wrapper

# [options.entry_points]
# console_scripts =
#     wrapper-function = package.subpackage.module:object.object